# driftguard

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  retrain.yml
docs/: architecture.md  dev-log-2026-07-16.md  dev-log-2026-07-17.md  dev-log-2026-07-20.md  dev-log-2026-07-21.md  dev-log-2026-07-22.md
driftguard/: __init__.py  alerting.py  cli.py  config.py  engine.py  errors.py  logging_setup.py  models.py  monitoring.py  registry.py  retraining.py
driftguard/data/: __init__.py  mockdata.py
driftguard/drift/: __init__.py  detector.py  psi.py
driftguard/model/: __init__.py  gbdt.py  metrics.py
driftguard/serving/: __init__.py  api.py  dashboard.py
driftguard/streaming/: __init__.py  bus.py  producer.py
monitoring/: prometheus.yml
scripts/: producer.py  retrain.py  train_baseline.py
tests/: test_api_cli.py  test_model_drift.py  test_registry_engine.py
